# Hardcore-Dining-Philosophers

./: .travis.yml  CMakeLists.txt  README.md
doc/: main_diagram.dia
inc/: Book.hpp  Fork.hpp  Log.hpp  Philosopher.hpp  Table.hpp  Waiter.hpp
src/: Book.cpp  HardcoreDP.cpp  Philosopher.cpp  Table.cpp  Waiter.cpp
